Disruptions: 1. Error on Acknowledge Button 2. No Messages in Ack and Add Comment 3. Date after Ack. 4. Comment button not visible for Ack Status 5. Change Resolver after Ack, 6. Reload data after deleting disruption. 7. Disruption Tracker CSS 8. Disruption Detail Screen Formatter 9. Hide comment button if Ack. and user other than resolver

--- a/MES/WebContent/Sass/components/_disruptionKPI.scss
+++ b/MES/WebContent/Sass/components/_disruptionKPI.scss
@@ -26,6 +26,9 @@
 // CSS for filter boxes in header bar
 #disruptionKPIView--lineComboBox{
 	border-left: solid 1px $twilight-blue !important;
+}
+#disruptionKPIView--lineComboBox,
+#disruptionKPIView--timeUnit{
     @extend %headerFilterBoxes;
 }
 
@@ -71,10 +74,6 @@
 		    border: 0px;
 	    }
 	}
-}
-
-#disruptionKPIView--timeUnit{
-    @extend %headerFilterBoxes;
 }
 
 
